修改服务器代码的防止重复逻辑